--- a/BuildConvolutionalNuralNetworkToEnhanceCNN.ipynb
+++ b/BuildConvolutionalNuralNetworkToEnhanceCNN.ipynb
@@ -15,19 +15,22 @@
     "test_images = test_images.reshape(10000, 28, 28, 1)\n",
     "test_images=test_images / 255.0\n",
     "model = tf.keras.models.Sequential([\n",
-    "  tf.keras.layers.Conv2D(64, (3, 3), activation='relu', input_shape=(28, 28, 1)),\n",
-    "  tf.keras.layers.MaxPooling2D(2, 2),\n",
-    "  tf.keras.layers.Conv2D(64, (3, 3), activation='relu'),\n",
-    "  tf.keras.layers.MaxPooling2D(2,2),\n",
-    "  tf.keras.layers.Flatten(),\n",
-    "  tf.keras.layers.Dense(128, activation='relu'),\n",
-    "  tf.keras.layers.Dense(10, activation='softmax')\n",
+    "tf.keras.layers.Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)),\n",
+    "tf.keras.layers.MaxPooling2D(2, 2),\n",
+    "#Add another convolution\n",
+    "tf.keras.layers.Conv2D(64, (3,3), activation='relu'),\n",
+    "tf.keras.layers.MaxPooling2D(2, 2),\n",
+    "#Now flatten the output. After this you'll just have the same DNN structure as the non convolutional version\n",
+    "tf.keras.layers.Flatten(),\n",
+    "#The same 128 dense layers, and 10 output layers as in the pre-convolution example:\n",
+    "tf.keras.layers.Dense(128, activation='relu'),\n",
+    "tf.keras.layers.Dense(10, activation='softmax')\n",
     "])\n",
     "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
-    "model.summary()\n",
     "model.fit(training_images, training_labels, epochs=5)\n",
-    "test_loss, test_accuracy = model.evaluate(test_images, test_labels)\n",
-    "print ('Test loss: {}, Test accuracy: {}'.format(test_loss, test_accuracy*100))"
+    "test_loss, test_acc = model.evaluate(test_images, test_labels)\n",
+    "print(test_labels[:100])\n",
+    "print ('Test loss: {}, Test accuracy: {}'.format(test_loss, test_acc*100))"
    ]
   }
  ],
